<resources>
    <string name="app_name">Guess K-pop</string>

    <string name="yandex_id_metrica" translatable="false">7f5528ae-626c-4298-a361-5635a0ad148a</string>

    <string name="admob_id_account" translatable="false">ca-app-pub-1704760570617777~3272301452</string>
    <string name="admob_id_reward_star" translatable="false">ca-app-pub-1704760570617777/1487897750</string>
    <string name="admob_id_reward_bands" translatable="false">ca-app-pub-1704760570617777/8141484754</string>
    <string name="admob_id_interstitial" translatable="false">ca-app-pub-1704760570617777/7888214522</string>

    <string name="yandex_id_interstitial_menu" translatable="false">R-M-1594557-1</string>
    <string name="yandex_id_reward" translatable="false">R-M-1594557-2</string>
    <string name="yandex_id_interstitial_game" translatable="false">R-M-1594557-5</string>

    <!--    <string name="admob_id_account" translatable="false">ca-app-pub-3940256099942544~3347511713</string>-->
    <!--    <string name="admob_id_reward_star" translatable="false">ca-app-pub-3940256099942544/5224354917</string>-->
    <!--    <string name="admob_id_reward_bands" translatable="false">ca-app-pub-3940256099942544/5224354917</string>-->
    <!--    <string name="admob_id_interstitial" translatable="false">ca-app-pub-3940256099942544/1033173712</string>-->

    <string name="menuItemGuessStar">Guess star</string>
    <string name="menuItemGuessStarReverse">Guess star reverse</string>
    <string name="menuItemGuessBand">Guess Band</string>
    <string name="menuItemTinderSwipe">Distribute by bands</string>
    <string name="menuItemGallery">Gallery</string>
    <string name="menuItemSettings">Settings</string>
    <string name="menuItemAbout">About</string>

    <string name="achGuessStarBeginner">Idol neophyte</string>
    <string name="achGuessStarNormal">Idol scholar</string>
    <string name="achGuessStarExpert">Idol expert</string>
    <string name="achGuessBandsBeginner">Guess Band neophyte</string>
    <string name="achGuessBandsNormal">Guess Band scholar</string>
    <string name="achGuessBandsExpert">Guess Band expert</string>
    <string name="achDistributeByBandsBeginner">Distribute band neophyte</string>
    <string name="achDistributeByBandsNormal">Distribute band scholar</string>
    <string name="achDistributeByBandsExpert">Distribute band expert</string>
    <string name="achTripleExpert">K-pop Master</string>
    <string name="achSecretAch">Secret achievement</string>

    <string name="achGuessStarBeginnerText">You got 10 points in Guess Star gamemode</string>
    <string name="achGuessStarNormalText">You got 50 points in Guess Star gamemode</string>
    <string name="achGuessStarExpertText">You got 150 points in Guess Star gamemode</string>
    <string name="achGuessBandsBeginnerText">You got 10 points in Guess Band gamemode</string>
    <string name="achGuessBandsNormalText">You got 50 points in Guess Band gamemode</string>
    <string name="achGuessBandsExpertText">You got 150 points in Guess Band gamemode</string>
    <string name="achDistributeByBandsBeginnerText">You got 15 points in Distribute by bands gamemode</string>
    <string name="achDistributeByBandsNormalText">You got 75 points in Distribute by bands gamemode</string>
    <string name="achDistributeByBandsExpertText">You got 225 points in Distribute by bands gamemode</string>
    <string name="achTripleExpertText">You are an expert in all three modes. By unlocking this achievement, all advertising will be disabled. Only the most worthy will pass.</string>
    <string name="achSecretAchText">What is it?</string>

    <string name="settings0">Settings</string>
    <string name="settings1">Hint mode</string>
    <string name="settings2">Hard mode</string>
    <string name="settings3">Dark theme</string>
    <string name="settings4">Sound enabled</string>
    <string name="settings5">Parameter 5</string>
    <string name="resetRecords">Score reset</string>
    <string name="bandsActiveButton">Change available bands</string>
    <string name="bandsActiveTitle">Change available bands</string>

    <string name="OptionsSet">Settings saved</string>

    <string name="questionReset">Confirm reset all records?</string>
    <string name="questionConfirmTitle">Please confirm</string>
    <string name="answerAccept">Accept</string>
    <string name="answerCancel">Cancel</string>
    <string name="answerYes">Yes</string>
    <string name="answerNo">No</string>


    <string name="gameRulesAbaut">Games Rules</string>
    <string name="aboutTitle">Welcome!</string>
    <string name="aboutText">
"\t"
         Welcome to the Guess K-pop app! In this application, you can test your knowledge of K-pop. You are offered 3 main game modes: "\n"
         1) Guess star"\n"
         2) Guess band"\n"
         3) Distribute by bands"\n"
   "\t" With these game modes, you can memorize all the most famous K-pop groups, as well as all their incredible members! And of course, test your knowledge!"\n"
         Each game mode has its own achievements. They can be viewed in the main menu."\n"
p.s: We will be glad to receive any feedback from you on the application page in the play market "\n"
        Good luck and have fun!
    </string>

    <string name="title_activity_two_bands_tinder">TwoBandsTinder</string>

    <string name="achievementUnlocked">Achievement unlocked!</string>

    <string name="newRecordTitle">New record!</string>
    <string name="newRecordText">Congratulations! You have reached new record:</string>
    <string name="endGameTitle">Game over</string>
    <string name="endGameTextScoreNow">Your score: %d</string>
    <string name="endGameTextRecordNow">Your record: %d</string>
    <string name="gameModeAbout">About game mode</string>
    <string name="guessStarGameModeAbout">
The "Guess Star" game mode allows you to test your knowledge of K-pop stars."\n"
         Guess the names of K-pop artists from photos. It\'s not important for you to know what group the star on screen is in, but it is important to know his or her name. You have 3 lives. The correct answer will increase your score, and the wrong answer will take lives. "\n"
         In addition, for every 35 points, 1 life will be restored to you, and for every 70 a hint will be added. But I think you\'ll figure it out."\n"
         Good luck :)
    </string>
    <string name="guessBandGameModeAbout">
The "Guess Band" game mode allows you to test your knowledge of the most famous K-pop groups in history!
         Guess the group the artist is in on the screen. Every correct answer increases your score! And the unfaithful reduces life. It is clear that when lives end, the game will be over."\n"
         In addition, you have 3 hints for the game, which will tell you the letters that make up the name of the k-pop group. Every 35th group guessed will restore one life to you. And every 70th will add a hint. But I think you\'ll figure it out."\n"
         Good luck ;)
    </string>
    <string name="guessBandGameModeTwoAbout">
The "Guess Band" game mode allows you to test your knowledge of the most famous K-pop groups in history!
         Guess the group the artist is in on the screen. Every correct answer increases your score! And the unfaithful reduces life. It is clear that when lives end, the game will be over."\n"
         In addition, you have 3 hints for the game, which will tell you the letters that make up the name of the k-pop group. Every 35th group guessed will restore one life to you. And every 70th will add a hint. But I think you\'ll figure it out."\n"
         Good luck ;)
    </string>
    <string name="twoBandsTinderGameModeAbout">
The "Distribute by bands" game mode allows you to test your knowledge of k-pop groups"\n"
        You are given a set of different K-pop stars, and you need to divide them into 2 groups. To distribute artist cards, you need to swipe them to the side of the screen corresponding to the K-pop group. "\n"
        At any time you can view all artist cards and redistribute them. After you confirm your distribution, you will be shown whether everything is distributed correctly, after which you will move on to the next pair of groups. "\n"
        Every time you are wrong by more than one artist, one of your lives is burned. As soon as everything is over, the game will end. For each pair of correctly distributed artists, you will receive 1 point. So try to answer correctly!
        Well, there are also hints - they will show the names of the artists, so that it would be easier for you to understand what group they are from."\n"
        Lives are restored every 50 points, and hints are restored every 100 points. "\n"
        In reality, everything is much simpler - good luck!"\n"
        Distribute them all ツ
    </string>

    <string name="score_text">Score: %d</string>
    <string name="record_text">Record: %d</string>
    <string name="last_artist_text">Last artist: %s</string>

    <string name="endHintCongratulate">Attention!</string>
    <string name="endHintReward">View ad for hint? (remained %d)</string>
    <string name="endHintYes">Yes</string>
    <string name="endHintNo">No</string>

    <string name="endGameCongratulate">Game over!</string>
    <string name="endGameNewGame">Start new game?</string>
    <string name="endGameReward">Or view ad for 1 extra life?</string>
    <string name="endGameYes">Yes</string>
    <string name="endGameNo">No</string>
    <string name="endGameRewardShow">Get extra life</string>

    <string name="settingRed">Red</string>
    <string name="settingGreen">Green</string>
    <string name="settingPink">Pastel</string>
    <string name="settingRabbit">Rabbit</string>
    <string name="settingHamster">Hamster</string>
    <string name="settingCat">Kitty</string>


    <string name="ttWrongAnswer">Finish! You made</string>
    <string name="tinderCountGroupError">The number of artists in the groups is not the same!</string>
    <string name="tinderLoseScreenTitle">Done!</string>
    <string name="tinderLoseScreenWinMessage">"You know both bands perfectly! Congratulations! The number of points received: %d!"</string>
    <string name="tinderLoseScreenLoseMessage">"Not bad! You scored %d out of %d points! Unfortunately, you misidentified some of the contestants!"</string>
    <string name="tinderContinue">Continue</string>
    <string name="tinderMissTakeView">View misidentified</string>
    <string name="tinderLoseScreenExit">Exit</string>
    <string name="tinderRedistribute">Redistribute</string>
    <string name="tinderOr">or</string>
    <string name="tinderDistributeGroup">Distributed artists:</string>

</resources>