<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/constraint"
    tools:context=".activity.Settings">


    <TextView
        android:id="@+id/textView4"
        android:layout_width="135dp"
        android:layout_height="42dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/settings0"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:id="@+id/rl3"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/settingsCancel"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:background="@color/cancelRed"
            android:layout_marginRight="40dp"
            android:layout_marginEnd="40dp"
            android:text="@string/answerCancel" />

        <Button
            android:id="@+id/settingsConfirm"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:background="@color/acceptGreen"
            android:layout_marginLeft="40dp"
            android:layout_marginStart="40dp"
            android:text="@string/answerAccept" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl2"
        android:layout_width="432dp"
        android:layout_height="459dp"
        app:layout_constraintBottom_toTopOf="@+id/rl3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/optionSwitch3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:text="@string/settings3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:track="@color/colorAccentLight"
            app:trackTintMode="add" />

        <RadioGroup
            android:id="@+id/radGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/optionSwitch3"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/blueVar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="Зайка" />

            <RadioButton
                android:id="@+id/redVar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Хомячок" />

            <RadioButton
                android:id="@+id/catVar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Котик" />

        </RadioGroup>

        <ImageView
            android:id="@+id/exampleBack"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_below="@+id/radGroup"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            tools:srcCompat="@tools:sample/avatars" />

        <Button
            android:id="@+id/resetRecordButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingTop="5dp"
            android:paddingRight="10dp"
            android:paddingBottom="5dp"
            android:text="@string/resetRecords"
            android:textFontWeight="1" />


    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>